--- a/public/beta.html
+++ b/public/beta.html
@@ -114,7 +114,7 @@
             <h2 class="text-xl font-semibold mb-4">Initialize Adventure</h2>
             <div class="space-y-4">
                 <div>
-                    <label class="block text-sm text-gray-400 mb-1">Gemini API Key (Free Tier)</label>
+                    <label class="block text-sm text-gray-400 mb-1">Groq API Key (Free Tier)</label>
                     <input type="password" id="api-key" placeholder="Enter your key..."
                         class="w-full bg-gray-800 border border-gray-700 rounded-lg p-3 focus:ring-2 focus:ring-red-500 outline-none">
                 </div>
@@ -505,7 +505,7 @@
                 },
                 body: JSON.stringify({
                     model: "meta-llama/llama-4-scout-17b-16e-instruct",
-                    contents: [{ parts: [{ text: prompt }] }],
+                    contents: [{role: "user", content: prompt }],
                     generationConfig: { maxOutputTokens: 8192, temperature: 0.85 }
                 })
             });
@@ -739,7 +739,7 @@
         // --- Utilities & initialization ---
         elements.startBtn.addEventListener('click', () => {
             const key = document.getElementById('api-key').value.trim();
-            if (!key) { showError("Gemini API Key is required."); return; }
+            if (!key) { showError("Groq API Key is required."); return; }
 
             // init new session
             state.apiKey = key;
