--- a/public/beta.html
+++ b/public/beta.html
@@ -508,6 +508,10 @@
                 ],
                 "model": "meta-llama/llama-4-scout-17b-16e-instruct",
                 "temperature": 1,
+                "max_completion_tokens": 1024,
+                "top_p": 1,
+                "stream": false,
+                "stop": null
             });
             return data.choices[0].message.content
         }
