--- a/public/beta.html
+++ b/public/beta.html
@@ -493,7 +493,7 @@
 
         async function fetchGemini(prompt) {
             console.log(state.apiKey)
-            const groq = new Groq({ apiKey: state.apiKey });
+            const groq = new Groq({ apiKey: state.apiKey, dangerouslyAllowBrowser: true });
 
             const data = await groq.chat.completions.create({
                 "messages": [
