--- a/public/beta.html
+++ b/public/beta.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PacePulse: AI Run-Narrator</title>
+    <title>MyEcoJourney: AI Run-Narrator</title>
 
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
