--- a/public/index.html
+++ b/public/index.html
@@ -531,7 +531,7 @@
             ${text.replace(/\n/g, '<br>')}
         </div>
     `;
-            elements.container.prepend(div);
+            elements.container.append(div);
         }
 
         // --- TTS ---
