--- a/public/index.html
+++ b/public/index.html
@@ -473,7 +473,7 @@
                 
                 Task: Write Chapter ${state.chapters.length + 1}. 
                 Context: Continue the ongoing story based on these previous themes: ${state.fullStoryContext.slice(-1500)}.
-                Requirement: Write a very long, at least 3000 words, high-quality chapter that is not cut off, use second person and only return plain text, not markdown.
+                Requirement: Write a very long, at least 2500 words, high-quality chapter that is not cut off, use second person and only return plain text, not markdown.
             `;
 
             const chapterText = await fetchGemini(prompt);
@@ -575,7 +575,7 @@
                     console.log(audioChunk)
                 });
 
-                stream.on('end', () => {
+                stream.addEventListener('end', () => {
                     barFill.style.width = `100%`;
                     statusText.innerText = "Audio Ready";
                     var blob = new Blob(chunks, { type: "audio/mp3" })
