--- a/public/index.html
+++ b/public/index.html
@@ -555,7 +555,7 @@
                 model: "canopylabs/orpheus-v1-english",
                 voice: "autumn",
                 response_format: "wav",
-                input: "",
+                input: text,
             });
 
             const buffer = AudioBuffer.from(await wav.arrayBuffer());
