--- a/public/index.html
+++ b/public/index.html
@@ -208,10 +208,9 @@
             class="ml-4 bg-gray-800 hover:bg-gray-700 text-gray-200 px-3 py-2 rounded-md text-sm whitespace-nowrap">End
             Run</button>
     </div>
-
     <script type="module">
-        import { EdgeTTS } from 'https://cdn.jsdelivr.net/npm/edge-tts-universal/dist/browser.js';
-        window.EdgeTTS = EdgeTTS;
+        import kokoroJs from 'https://cdn.jsdelivr.net/npm/kokoro-js@1.2.1/+esm'
+
         // --- State ---
         let state = {
             active: false,
@@ -550,10 +549,16 @@
             const audioContainer = document.getElementById(`audio-container-${chapterIdx}`);
 
 
-            const tts = new window.EdgeTTS(text, 'en-US-AndrewMultilingualNeural');
-            const result = await tts.synthesize();
+            const model_id = "onnx-community/Kokoro-82M-v1.0-ONNX";
+            const tts = await KokoroTTS.from_pretrained(model_id, {
+                dtype: "q4",
+                device: "wasm"
+            });
 
-            var blob = new Blob([new ArrayBuffer(await result.audio.arrayBuffer())], { type: "audio/mp3" })
+            const audio = await tts.generate(text, {
+                voice: "af_heart",
+            });
+            var blob = new Blob([audio], {type: "audio/mp3"})
             state.audio.push(blob);
             const url = URL.createObjectURL(blob);
 
