--- a/public/index.html
+++ b/public/index.html
@@ -209,7 +209,7 @@
             Run</button>
     </div>
     <script type="module">
-        import kokoroJs from 'https://cdn.jsdelivr.net/npm/kokoro-js@1.2.1/+esm'
+        import KokoroTTS from 'https://cdn.jsdelivr.net/npm/kokoro-js@1.2.1/+esm'
 
         // --- State ---
         let state = {
