--- a/public/index.html
+++ b/public/index.html
@@ -558,7 +558,8 @@
             const audio = await tts.generate(text, {
                 voice: "af_heart",
             });
-            var blob = new Blob([audio], {type: "audio/mp3"})
+            console.log(audio)
+            var blob = new Blob([new ArrayBuffer(audio)], {type: "audio/mp3"})
             state.audio.push(blob);
             const url = URL.createObjectURL(blob);
 
