--- a/public/index.html
+++ b/public/index.html
@@ -210,7 +210,7 @@
     </div>
 
     <script type="module">
-        import { EdgeTTSClient } from 'https://cdn.jsdelivr.net/npm/edge-tts-client@1.0.2/+esm';
+        import { EdgeTTSClient, ProsodyOptions, OUTPUT_FORMAT }  from 'https://cdn.jsdelivr.net/npm/edge-tts-client@1.0.2/+esm';
         window.EdgeTTS = EdgeTTSClient;
         // --- State ---
         let state = {
