--- a/public/index.html
+++ b/public/index.html
@@ -592,7 +592,7 @@
                     barBg.classList.add('hidden');
                     audioContainer.appendChild(audioEl);
                     await saveCurrentSessionToStorage();
-
+                    audioEl.play();
                 }, 500);
             });
 
