--- a/public/index.html
+++ b/public/index.html
@@ -445,155 +445,140 @@
                     
                     Context of previous events: ${context || 'The journey begins now.'}`;
 
-                try {
-                    const response = await fetch(apiUrl, {
-                        method: "POST",
-                        headers: {
-                            "Authorization": `Bearer zpb7IgLy7bNk5MCh5LUfYmJnTtJCqyRQ`,
-                            "Content-Type": "application/json"
-                        },
-                        body: JSON.stringify({
-                            model: "mistral-large-latest", // Or another model like 'mistral-small-latest'
-                            messages: [
-                                {
-                                    role: "user",
-                                    content: prompt
-                                }
-                            ],
-                            temperature: 0.7, // Optional: adjust creativity
-                            top_p: 0.9,       // Optional: adjust diversity
-                        })
-                    });
+                    try {
+                        const response = await fetch("https://api.mistral.ai/v1/chat/completions", {
+                            method: "POST",
+                            headers: {
+                                "Authorization": `Bearer zpb7IgLy7bNk5MCh5LUfYmJnTtJCqyRQ`,
+                                "Content-Type": "application/json"
+                            },
+                            body: JSON.stringify({
+                                model: "mistral-small-latest", // Or another model like 'mistral-small-latest'
+                                messages: [
+                                    {
+                                        role: "user",
+                                        content: userMessage
+                                    }
+                                ],
+                                temperature: 0.7, // Optional: adjust creativity
+                                top_p: 0.9,       // Optional: adjust diversity
+                            })
+                        });
 
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! status: ${response.status}`);
+                        if (!response.ok) {
+                            throw new Error(`HTTP error! status: ${response.status}`);
+                        }
+
+                        const data = await response.json();
+                        console.log(data.choices[0].message.content);
+
+                    } catch (err) {
+                        console.error("Narrative Error:", err);
+                    } finally {
+                        state.isGenerating = false;
+                        ui.showLoading(false);
                     }
-
-                    const data = await response.json();
-                    console.log(data.choices[0].message.content);
-
-                } 
-
-                    const data = await response.json();
-                const text = data.candidates[0].content.parts[0].text;
-
-                const chapter = {
-                    id: Date.now(),
-                    text,
-                    intensity,
-                    timestamp: new Date().toLocaleTimeString()
-                };
-
-                state.chapters.push(chapter);
-                ui.renderChapter(chapter);
-                this.autoSave();
-            } catch(err) {
-                console.error("Narrative Error:", err);
-            } finally {
-                state.isGenerating = false;
-                ui.showLoading(false);
-            }
-        },
+                },
 
             async autoSave() {
-                await localforage.setItem(state.id, JSON.parse(JSON.stringify(state)));
-                let index = await localforage.getItem('journey_index') || [];
-                if (!index.includes(state.id)) {
-                    index.push(state.id);
-                    await localforage.setItem('journey_index', index);
-                }
-            },
+                    await localforage.setItem(state.id, JSON.parse(JSON.stringify(state)));
+                    let index = await localforage.getItem('journey_index') || [];
+                    if (!index.includes(state.id)) {
+                        index.push(state.id);
+                        await localforage.setItem('journey_index', index);
+                    }
+                },
 
                 async saveAndExit() {
-            state.isPaused = true;
-            if (state.watchId) navigator.geolocation.clearWatch(state.watchId);
-            await this.autoSave();
-            window.location.reload();
-        },
+                    state.isPaused = true;
+                    if (state.watchId) navigator.geolocation.clearWatch(state.watchId);
+                    await this.autoSave();
+                    window.location.reload();
+                },
 
-        togglePause() {
-            state.isPaused = !state.isPaused;
-            document.getElementById('btn-pause').innerHTML = state.isPaused
-                ? '<i data-lucide="play" class="w-5 h-5"></i>'
-                : '<i data-lucide="pause" class="w-5 h-5"></i>';
-            lucide.createIcons();
-        }
-        };
-
-        const ui = {
-            toggleCarpool() {
-                state.config.carpool = !state.config.carpool;
-                const label = document.getElementById('carpool-label');
-                const indicator = document.getElementById('carpool-indicator');
-                const dot = indicator.querySelector('div');
-                const co2Label = document.getElementById('stat-co2-label');
-                const accent = document.getElementById('co2-accent');
-
-                if (state.config.carpool) {
-                    label.innerText = "Carpool Protocol";
-                    label.classList.add('text-orange-400');
-                    indicator.classList.replace('bg-gray-800', 'bg-orange-500/40');
-                    dot.classList.replace('left-1', 'left-6');
-                    dot.classList.replace('bg-gray-600', 'bg-orange-400');
-                    co2Label.innerText = "Group Offset";
-                    co2Label.classList.replace('text-green-400', 'text-orange-400');
-                    accent.classList.replace('bg-green-500/30', 'bg-orange-500/30');
-                } else {
-                    label.innerText = "Solo Expedition";
-                    label.classList.remove('text-orange-400');
-                    indicator.classList.replace('bg-orange-500/40', 'bg-gray-800');
-                    dot.classList.replace('left-6', 'left-1');
-                    dot.classList.replace('bg-orange-400', 'bg-gray-600');
-                    co2Label.innerText = "CO2 Redux";
-                    co2Label.classList.replace('text-orange-400', 'text-green-400');
-                    accent.classList.replace('bg-orange-500/30', 'bg-green-500/30');
+                togglePause() {
+                    state.isPaused = !state.isPaused;
+                    document.getElementById('btn-pause').innerHTML = state.isPaused
+                        ? '<i data-lucide="play" class="w-5 h-5"></i>'
+                        : '<i data-lucide="pause" class="w-5 h-5"></i>';
+                    lucide.createIcons();
                 }
-                this.updateDashboard();
-            },
+            };
 
-            updateDashboard() {
-                const simSpeed = parseFloat(document.getElementById('sim-speed').value);
-                const displaySpeed = simSpeed > 0 ? simSpeed : state.currentSpeed;
-                document.getElementById('stat-speed').innerText = displaySpeed.toFixed(1);
-                document.getElementById('stat-dist').innerText = state.distance.toFixed(2);
-                const factor = state.config.carpool ? CARPOOL_CO2_FACTOR : SOLO_CO2_FACTOR;
-                document.getElementById('stat-co2').innerText = Math.round(state.distance * factor);
-                const label = displaySpeed > 10 ? 'High' : (displaySpeed > 4 ? 'Moderate' : 'Low');
-                document.getElementById('label-intensity').innerText = label;
-            },
+            const ui = {
+                toggleCarpool() {
+                    state.config.carpool = !state.config.carpool;
+                    const label = document.getElementById('carpool-label');
+                    const indicator = document.getElementById('carpool-indicator');
+                    const dot = indicator.querySelector('div');
+                    const co2Label = document.getElementById('stat-co2-label');
+                    const accent = document.getElementById('co2-accent');
 
-            updateTimer() {
-                const hrs = Math.floor(state.elapsedSeconds / 3600);
-                const mins = Math.floor((state.elapsedSeconds % 3600) / 60);
-                const secs = state.elapsedSeconds % 60;
-                document.getElementById('timer').innerText =
-                    `${hrs.toString().padStart(2, '0')}:${mins.toString().padStart(2, '0')}:${secs.toString().padStart(2, '0')}`;
-            },
+                    if (state.config.carpool) {
+                        label.innerText = "Carpool Protocol";
+                        label.classList.add('text-orange-400');
+                        indicator.classList.replace('bg-gray-800', 'bg-orange-500/40');
+                        dot.classList.replace('left-1', 'left-6');
+                        dot.classList.replace('bg-gray-600', 'bg-orange-400');
+                        co2Label.innerText = "Group Offset";
+                        co2Label.classList.replace('text-green-400', 'text-orange-400');
+                        accent.classList.replace('bg-green-500/30', 'bg-orange-500/30');
+                    } else {
+                        label.innerText = "Solo Expedition";
+                        label.classList.remove('text-orange-400');
+                        indicator.classList.replace('bg-orange-500/40', 'bg-gray-800');
+                        dot.classList.replace('left-6', 'left-1');
+                        dot.classList.replace('bg-orange-400', 'bg-gray-600');
+                        co2Label.innerText = "CO2 Redux";
+                        co2Label.classList.replace('text-orange-400', 'text-green-400');
+                        accent.classList.replace('bg-orange-500/30', 'bg-green-500/30');
+                    }
+                    this.updateDashboard();
+                },
 
-            updateSyncBar() {
-                document.getElementById('sync-progress').style.width = `${state.syncProgress}%`;
-                document.getElementById('label-sync').innerText = `${Math.round(state.syncProgress)}%`;
-            },
+                updateDashboard() {
+                    const simSpeed = parseFloat(document.getElementById('sim-speed').value);
+                    const displaySpeed = simSpeed > 0 ? simSpeed : state.currentSpeed;
+                    document.getElementById('stat-speed').innerText = displaySpeed.toFixed(1);
+                    document.getElementById('stat-dist').innerText = state.distance.toFixed(2);
+                    const factor = state.config.carpool ? CARPOOL_CO2_FACTOR : SOLO_CO2_FACTOR;
+                    document.getElementById('stat-co2').innerText = Math.round(state.distance * factor);
+                    const label = displaySpeed > 10 ? 'High' : (displaySpeed > 4 ? 'Moderate' : 'Low');
+                    document.getElementById('label-intensity').innerText = label;
+                },
 
-            showLoading(isLoading) {
-                const loader = document.getElementById('loading-indicator');
-                if (isLoading) {
-                    loader.classList.remove('hidden');
-                    loader.scrollIntoView({ behavior: 'smooth' });
-                } else {
-                    loader.classList.add('hidden');
-                }
-            },
+                updateTimer() {
+                    const hrs = Math.floor(state.elapsedSeconds / 3600);
+                    const mins = Math.floor((state.elapsedSeconds % 3600) / 60);
+                    const secs = state.elapsedSeconds % 60;
+                    document.getElementById('timer').innerText =
+                        `${hrs.toString().padStart(2, '0')}:${mins.toString().padStart(2, '0')}:${secs.toString().padStart(2, '0')}`;
+                },
 
-            renderChapter(chapter) {
-                const feed = document.getElementById('chapter-feed');
-                const card = document.createElement('div');
-                card.className = 'chapter-card cyber-panel p-10 rounded-2xl space-y-6 animate-in fade-in slide-in-from-bottom-8 duration-1000';
+                updateSyncBar() {
+                    document.getElementById('sync-progress').style.width = `${state.syncProgress}%`;
+                    document.getElementById('label-sync').innerText = `${Math.round(state.syncProgress)}%`;
+                },
 
-                // Format paragraphs
-                const formattedText = chapter.text.split('\n').filter(p => p.trim() !== '').map(p => `<p class="mb-6">${p}</p>`).join('');
+                showLoading(isLoading) {
+                    const loader = document.getElementById('loading-indicator');
+                    if (isLoading) {
+                        loader.classList.remove('hidden');
+                        loader.scrollIntoView({ behavior: 'smooth' });
+                    } else {
+                        loader.classList.add('hidden');
+                    }
+                },
 
-                card.innerHTML = `
+                renderChapter(chapter) {
+                    const feed = document.getElementById('chapter-feed');
+                    const card = document.createElement('div');
+                    card.className = 'chapter-card cyber-panel p-10 rounded-2xl space-y-6 animate-in fade-in slide-in-from-bottom-8 duration-1000';
+
+                    // Format paragraphs
+                    const formattedText = chapter.text.split('\n').filter(p => p.trim() !== '').map(p => `<p class="mb-6">${p}</p>`).join('');
+
+                    card.innerHTML = `
                     <div class="flex justify-between items-center text-[10px] font-bold uppercase tracking-[0.2em] text-cyan-500 mb-4 border-b border-cyan-500/20 pb-4">
                         <span class="flex items-center gap-2"><i data-lucide="hash" class="w-3 h-3"></i> Core Entry ${state.chapters.length}</span>
                         <span>${chapter.timestamp} • ${chapter.intensity} Intensity</span>
@@ -602,49 +587,49 @@
                         ${formattedText}
                     </div>
                 `;
-                feed.prepend(card);
-                lucide.createIcons();
-            },
+                    feed.prepend(card);
+                    lucide.createIcons();
+                },
 
-            renderAllChapters() {
-                const feed = document.getElementById('chapter-feed');
-                feed.innerHTML = '';
-                state.chapters.slice().reverse().forEach(c => this.renderChapter(c));
-            },
+                renderAllChapters() {
+                    const feed = document.getElementById('chapter-feed');
+                    feed.innerHTML = '';
+                    state.chapters.slice().reverse().forEach(c => this.renderChapter(c));
+                },
 
-            async toggleSavedDashboard() {
-                const modal = document.getElementById('modal-archives');
-                const list = document.getElementById('archives-list');
-                if (modal.classList.contains('hidden')) {
-                    const index = await localforage.getItem('journey_index') || [];
-                    list.innerHTML = index.length ? '' : '<p class="text-gray-500 text-center py-10 italic">Neural buffers empty.</p>';
-                    for (const id of index) {
-                        const data = await localforage.getItem(id);
-                        if (!data) continue;
-                        const item = document.createElement('div');
-                        item.className = 'cyber-panel p-4 rounded border-gray-800 hover:border-cyan-500 cursor-pointer transition flex justify-between items-center';
-                        item.onclick = () => { engine.startSession(data); this.toggleSavedDashboard(); };
-                        item.innerHTML = `
+                async toggleSavedDashboard() {
+                    const modal = document.getElementById('modal-archives');
+                    const list = document.getElementById('archives-list');
+                    if (modal.classList.contains('hidden')) {
+                        const index = await localforage.getItem('journey_index') || [];
+                        list.innerHTML = index.length ? '' : '<p class="text-gray-500 text-center py-10 italic">Neural buffers empty.</p>';
+                        for (const id of index) {
+                            const data = await localforage.getItem(id);
+                            if (!data) continue;
+                            const item = document.createElement('div');
+                            item.className = 'cyber-panel p-4 rounded border-gray-800 hover:border-cyan-500 cursor-pointer transition flex justify-between items-center';
+                            item.onclick = () => { engine.startSession(data); this.toggleSavedDashboard(); };
+                            item.innerHTML = `
                             <div>
                                 <h4 class="font-bold text-cyan-400 uppercase tracking-widest text-sm">${data.config.genre} Log</h4>
                                 <p class="text-xs text-gray-500">${data.chapters.length} Entries • ${data.distance.toFixed(2)} mi Traversed</p>
                             </div>
                             <i data-lucide="chevron-right" class="text-gray-700"></i>
                         `;
-                        list.appendChild(item);
+                            list.appendChild(item);
+                        }
+                        modal.classList.remove('hidden');
+                        lucide.createIcons();
+                    } else {
+                        modal.classList.add('hidden');
                     }
-                    modal.classList.remove('hidden');
-                    lucide.createIcons();
-                } else {
-                    modal.classList.add('hidden');
                 }
-            }
-        };
+            };
 
-        window.onload = () => {
-            lucide.createIcons();
-            document.getElementById('sim-speed').addEventListener('input', () => ui.updateDashboard());
-        };
+            window.onload = () => {
+                lucide.createIcons();
+                document.getElementById('sim-speed').addEventListener('input', () => ui.updateDashboard());
+            };
     </script>
 </body>
 
