--- a/public/index.html
+++ b/public/index.html
@@ -457,7 +457,7 @@
                                 messages: [
                                     {
                                         role: "user",
-                                        content: userMessage
+                                        content: prompt
                                     }
                                 ],
                                 temperature: 0.7, // Optional: adjust creativity
