--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     </div>
 
     <script>
-        const apiKey = ""; // ADD YOUR API KEY HERE
+        const apiKey = "AIzaSyBSVpCIvb03UHknZ7c8A3O9J_GDb3kPTPw"; // ADD YOUR API KEY HERE
         const CHAPTER_INTERVAL_MS = 10 * 60 * 1000; 
         const SOLO_CO2_FACTOR = 404; 
         const CARPOOL_CO2_FACTOR = 180; 
