--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <div id="loading-indicator" class="hidden space-y-4 cyber-panel p-8 rounded-xl">
             <div class="flex items-center gap-2 mb-4">
                 <div class="w-3 h-3 bg-cyan-400 rounded-full animate-ping"></div>
-                <span class="text-xs text-cyan-400 uppercase font-bold tracking-tighter">Synthesizing 15-Paragraph Mistral Chapter...</span>
+                <span class="text-xs text-cyan-400 uppercase font-bold tracking-tighter">Synthesizing Chapter...</span>
             </div>
             <div class="space-y-2">
                 <div class="h-4 w-3/4 shimmer rounded-md"></div>
