--- a/classic.html
+++ b/classic.html
@@ -19,7 +19,7 @@
             background-color: var(--dark-bg);
             color: white;
             font-family: 'JetBrains Mono', monospace;
-            overflow: hidden;
+            overflow: scroll;
             height: 100vh;
         }
 
@@ -38,7 +38,7 @@
         .neon-text-blue { text-shadow: 0 0 10px var(--neon-blue); color: var(--neon-blue); }
         .neon-text-pink { text-shadow: 0 0 10px var(--neon-pink); color: var(--neon-pink); }
 
-        .progress-bar { height: 8px; background: #0a0a0a; border: 1px solid #222; position: relative; border-radius: 4px; overflow: hidden; }
+        .progress-bar { height: 8px; background: #0a0a0a; border: 1px solid #222; position: relative; border-radius: 4px; overflow: scroll; }
         .progress-fill { 
             height: 100%; background: linear-gradient(90deg, var(--neon-blue), var(--neon-pink)); 
             width: 0%; transition: width 0.4s ease; 
@@ -72,7 +72,7 @@
             border: 1px solid rgba(0, 242, 255, 0.3);
             position: relative;
             margin-bottom: 1.5rem;
-            overflow: hidden;
+            overflow: scroll;
             box-shadow: inset 0 0 20px rgba(0, 242, 255, 0.2);
         }
         
