--- a/classic.html
+++ b/classic.html
@@ -19,7 +19,7 @@
             background-color: var(--dark-bg);
             color: white;
             font-family: 'JetBrains Mono', monospace;
-            overflow: hidden;
+            overflow: scroll;
             height: 100vh;
         }
 
