--- a/classic.html
+++ b/classic.html
@@ -6,8 +6,8 @@
 
   <!-- Your TSX code here -->
   <script type="text/babel" data-presets="env,react,typescript">
-      import React, { useState, useEffect, useRef } from 'react';
-import { Leaf, Play, Plus, RotateCcw, Check, Pause, Volume2 } from 'lucide-react';
+      import React, { useState, useEffect, useRef } from 'https://cdn.jsdelivr.net/npm/react@19.2.3/+esm';
+import { Leaf, Play, Plus, RotateCcw, Check, Pause, Volume2 } from 'lhttps://cdn.jsdelivr.net/npm/lucide-react@0.562.0/+esm';
 
 const MyEcoJourney = () => {
   const audioRef = useRef(null);
@@ -525,5 +525,4 @@ const MyEcoJourney = () => {
 
 
   </script>
-
 </body>
